# jomllib

./: .gitignore  Pipfile  pyproject.toml
src/jomllib/: __init__.py  _parser.py  _re.py  _types.py
